--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -3,24 +3,24 @@
   This is a step by step tutorial for new Rails learners to learn how
   [[http://getbootstrap.com][Twitter Bootstrap]] works and to how to use Twitter Bootstrap to provide
   your application with modern layout and styling. This tutorial was last
-  tested on July 15, 2014 by Troy Will. We will build a working
+  tested on July 29, 2014 by [[https://github.com/troywill][Troy Will]]. We will build a working
   Rails application to match the [[http://getbootstrap.com/examples/starter-template/][starter-template]] template from [[http://getbootstrap.com/getting-started/#examples][example layouts]]. 
 
   Note for Emacs users: This tutorial was written in Emacs Org Mode. If
   you are an Emacs Org Mode user you can carry out the steps in this tutorial
   from the twitter-bootstrap-step-by-step.org file.
 
-* Milestone 1: Build an initial Rails application
+* TODO Milestone 1: Build an initial Rails application
 
   Let's build our example Rails application with a 'home' controller
   and 'home/index', "home/about", "home/contact" pages since those pages
   are in the [[http://getbootstrap.com/2.3.2/examples/starter-template.html][starter-template.html]] template.
   
-  1. [X] Initialize a new Rails application
+  1. [ ] Initialize a new Rails application
      #+BEGIN_SRC sh
        rails new example
      #+END_SRC
-  2. [X] Change into the newly created Rails application directory
+  2. [ ] Change into the newly created Rails application directory
      #+BEGIN_SRC sh
        cd example
      #+END_SRC
@@ -28,11 +28,11 @@
      #+BEGIN_SRC sh
        cp ../twitter-bootstrap-step-by-step.org .
      #+END_SRC
-  3. [X] Examine your Rails installation
+  4. [ ] Examine your Rails installation
      #+BEGIN_SRC sh
        rake about
      #+END_SRC
-  4. [X] Enable a JavaScript runtime in [[file:Gemfile][Gemfile]]
+  5. [ ] Enable a JavaScript runtime in [[file:Gemfile][Gemfile]]
      
      You probably got a 'Could not find a JavaScript runtime.' message from the
      'rake about' command. Open [[file:../Gemfile][Gemfile]] with your text editor and enable 'therubyracer.'
@@ -46,17 +46,17 @@
      #+BEGIN_EXAMPLE
        textmate Gemfile
      #+END_EXAMPLE
-  5. [X] Examine your Rails installation again
+  6. [ ] Examine your Rails installation again
      #+BEGIN_SRC sh
        rake about
      #+END_SRC
-  6. [X] Create a “home” controller and “home/index”, "home/about", "home/contact" pages
+  7. [ ] Create a “home” controller and “home/index”, "home/about", "home/contact" pages
      #+BEGIN_SRC sh :tangle bin/generate-controller-home.sh :shebang #!/bin/sh
        rails generate controller home index about contact --skip-stylesheets
      #+END_SRC
      
      Note the use of '--skip-stylesheets' since we will use Twitter Bootstrap's stylesheets
-  7. [X] Set the default route to home/index in [[file:config/routes.rb][config/routes.rb]]
+  8. [ ] Set the default route to home/index in [[file:config/routes.rb][config/routes.rb]]
      
      Open [[file:config/routes.rb][config/routes.rb]]  with your text editor. You will see the following
      commented line near the top of the file:
@@ -73,28 +73,29 @@
      Now, Rails will direct vistors to the application to home/index. We are
      ready to start the Rails application and incorporate Twitter Bootstrap's
      stylesheets and JavaScript scripts.
-  8. [X] Start the rails server
+  9. [ ] Start the rails server
      #+BEGIN_SRC sh
        rails server --port 3000
      #+END_SRC
 
   Now, let's incorporate Bootstrap into our application.
-* Milestone 2: Set up Twitter Bootstrap with the [[https://github.com/thomas-mcdonald/bootstrap-sass/blob/master/README.md#bootstrap-for-sass][bootstrap-sass]] gem
-  1. [X] Enable [[http://rubygems.org/gems/bootstrap-sass][bootstrap-sass]] in [[file:Gemfile][Gemfile]]
+* TODO Milestone 2: Set up Twitter Bootstrap with the [[https://github.com/thomas-mcdonald/bootstrap-sass/blob/master/README.md#bootstrap-for-sass][bootstrap-sass]] gem
+  1. [ ] Enable [[http://rubygems.org/gems/bootstrap-sass][bootstrap-sass]] in file:Gemfile
      #+BEGIN_SRC ruby
-       # See http://rubygems.org/gems/bootstrap-sass (July 2014)
-       gem "bootstrap-sass", "~> 3.2.0.0"
+       # See http://rubygems.org/gems/bootstrap-sass (July 29 2014)
+       gem "bootstrap-sass", "~> 3.2.0.1"
      #+END_SRC
-  2. [X] Remove the app/assets/stylesheets/application.css file
+  2. [ ] run bundle install
+  3. [ ] Remove the app/assets/stylesheets/application.css file
      #+BEGIN_SRC sh
        rm -v app/assets/stylesheets/application.css
      #+END_SRC
-  3. [ ] Create a new [[file:app/assets/stylesheets/application.css.scss][app/assets/stylesheets/application.css.scss]] file
-     #+BEGIN_SRC css :tangle 
+  4. [ ] Create a new file:app/assets/stylesheets/application.css.scss file
+     #+BEGIN_SRC css :tangle app/assets/stylesheets/application.css.scss :padline no
        @import "bootstrap";
        body { padding-top: 50px; }
      #+END_SRC
-  4. [ ] Import bootstrap javascript in [[file:app/assets/javascripts/application.js][app/assets/javascripts/application.js]]
+  5. [ ] Import bootstrap javascript in [[file:app/assets/javascripts/application.js][app/assets/javascripts/application.js]]
      #+BEGIN_SRC js
        //= require jquery
        //= require jquery_ujs
@@ -104,8 +105,17 @@
        // The following line Loads all Bootstrap javascripts
        // = require bootstrap
      #+END_SRC
-  5. [ ] Tangle the resulting app/views/layout/application.css.scss file
-     #+BEGIN_SRC html :tangle app/views/layout/application.css.scss :padline no
+* TODO Milestone 3: Use Twitter Bootstrap fixed width layout in our Rails application
+  
+  Now that Bootstrap is installed let's proceed to use Bootstrap's CSS in our application.
+
+  1. [ ] Overwrite app/views/layouts/application.html.erb with [[file:app/views/layouts/starter-template.html.erb][starter-template.html.erb]] 
+
+     [[file:app/views/layouts/starter-template.html.erb][starter-template.html.erb]] is Twitter Bootstrap's [[https://github.com/twitter/bootstrap/blob/master/docs/examples/starter-template.html][starter template]] example merged
+     with the default [[file:app/views/layouts/application.html.erb][app/views/layouts/application.html.erb]] file that Rails generates.
+     
+     Tangle the following file to [[file:app/views/layouts/application.html.erb]].
+     #+BEGIN_SRC html :tangle app/views/layouts/application.html.erb :padline no
        <!DOCTYPE html>
        <html lang="en">
          <head>
@@ -146,6 +156,7 @@
              <div class="starter-template">
                <h1>Bootstrap starter template</h1>
                <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+               <%= yield %>
              </div>
 
            </div><!-- /.container -->
@@ -154,76 +165,7 @@
        </html>
 
      #+END_SRC
-* Milestone 3: Use Twitter Bootstrap fixed width layout in our Rails application
-  
-  Now that Bootstrap is installed let's proceed to use Bootstrap's CSS in our application.
-
-  1. [ ] Overwrite app/views/layouts/application.html.erb with [[file:app/views/layouts/starter-template.html.erb][starter-template.html.erb]] 
      
-     #+BEGIN_SRC html
-     
-     #+END_SRC
-
-     #+BEGIN_SRC sh :tangle bin/copy-starter-template.sh :shebang #!/bin/sh
-       # ./bin/copy-starter-template.sh
-       # this command will replace the default rails layout with a Twitter Bootstrap layout
-       cp -v app/views/layouts/starter-template.html.erb ../app/views/layouts/application.html.erb
-     #+END_SRC
-     
-     [[file:app/views/layouts/starter-template.html.erb][starter-template.html.erb]] is Twitter Bootstrap's [[https://github.com/twitter/bootstrap/blob/master/docs/examples/starter-template.html][starter template]] example merged
-     with the default [[file:app/views/layouts/application.html.erb][app/views/layouts/application.html.erb]] file that Rails generates.
-     
-     Here's the resulting [[file:app/views/layouts/application.html.erb]]:
-     #+BEGIN_SRC html
-       <html>
-       <head>
-         <title>Bootstrap</title>
-         <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-         <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-         <%= csrf_meta_tags %>
-         <style>
-           body {
-           padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-           }
-         </style>  
-       </head>
-       
-           <body>
-           
-             <div class="navbar navbar-inverse navbar-fixed-top">
-               <div class="navbar-inner">
-                 <div class="container">
-                   <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                     <span class="icon-bar"></span>
-                     <span class="icon-bar"></span>
-                     <span class="icon-bar"></span>
-                   </button>
-                   <a class="brand" href="#">Project name</a>
-                   <div class="nav-collapse collapse">
-                     <ul class="nav">
-                       <li class="active"><a href="#">Home</a></li>
-                       <li><a href="#about">About</a></li>
-                       <li><a href="#contact">Contact</a></li>
-                     </ul>
-                   </div><!--/.nav-collapse -->
-                 </div>
-               </div>
-             </div>
-             <div class="container">
-               
-               <h1>Bootstrap starter template</h1>
-               <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-               <%= yield %>
-               
-             </div> <!-- /container -->
-             
-           </body>
-       
-       
-       </body>
-       </html>
-     #+END_SRC
-
      The starter example layout uses a fixed width layout, which is introduced at [[http://twitter.github.io/bootstrap/scaffolding.html#layouts][scaffolding.html#layouts]].
   2. [ ] Compare our application at http://localhost:3000 with http://twitter.github.io/bootstrap/examples/starter-template.html.
      
@@ -236,9 +178,9 @@
   #+TBLNAME: bootstrap_gems
   | Gem                     | Version | Downloads | This version | Author          |
   |-------------------------+---------+-----------+--------------+-----------------|
-  | [[http://rubygems.org/gems/bootstrap-sass][bootstrap-sass]]          | 3.2.0.0 | 4,118,000 |  31,000      | [[http://rubygems.org/profiles/tmcdonald][Thomas McDonald]] |
-  | [[http://rubygems.org/gems/twitter-bootstrap-rails][twitter-bootstrap-rails]] |   2.2.8 | 1,305,000 | 334,000      | [[http://rubygems.org/profiles/seyhunak][Seyhun Akyurek]]  |
-  | [[http://rubygems.org/gems/less-rails-bootstrap][less-rails-bootstrap]]    |   3.2.0 |   240,000 |   1,000      | [[http://rubygems.org/profiles/metaskills][Ken Collins]]     |
+  | [[http://rubygems.org/gems/bootstrap-sass][bootstrap-sass]]          | 3.2.0.1 | 4,118,000 |  2,000       | [[http://rubygems.org/profiles/tmcdonald][Thomas McDonald]] |
+  | [[http://rubygems.org/gems/twitter-bootstrap-rails][twitter-bootstrap-rails]] |   2.2.8 | 1,321,000 | 347,000      | [[http://rubygems.org/profiles/seyhunak][Seyhun Akyurek]]  |
+  | [[http://rubygems.org/gems/less-rails-bootstrap][less-rails-bootstrap]]    |   3.2.0 |   243,000 |   2,000      | [[http://rubygems.org/profiles/metaskills][Ken Collins]]     |
   | [[http://rubygems.org/gems/sass-twitter-bootstrap][sass-twitter-bootstrap]]  |   2.3.0 |     6,000 |   1,100      | [[http://rubygems.org/profiles/wadetandy][Wade Tandy]]      |
 ** Twitter Bootstrap GitHub
    | Link                                 | Description                             |
