--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -3,7 +3,7 @@
   This is a step by step tutorial for new Rails learners to learn how
   [[http://getbootstrap.com][Twitter Bootstrap]] works and to how to use Twitter Bootstrap to provide
   your application with modern layout and styling. This tutorial was last
-  tested on July 29, 2014 by [[https://github.com/troywill][Troy Will]]. We will build a working
+  tested on November 17, 2014 by [[https://github.com/troywill][Troy Will]]. We will build a working
   Rails application to match the [[http://getbootstrap.com/examples/starter-template/][starter-template]] template from [[http://getbootstrap.com/getting-started/#examples][example layouts]]. 
 
   Note for Emacs users: This tutorial was written in Emacs Org Mode. If
@@ -11,80 +11,86 @@
   from the twitter-bootstrap-step-by-step.org file.
 
 * TODO Milestone 1: Build an initial Rails application
+** Step by Step
+   Let's build our example Rails application with a 'home' controller
+   and 'home/index', "home/about", "home/contact" pages since those pages
+   are in the [[https://github.com/twbs/bootstrap/tree/master/docs/examples/starter-template/index.html][starter-template/index.html]] template.
 
-  Let's build our example Rails application with a 'home' controller
-  and 'home/index', "home/about", "home/contact" pages since those pages
-  are in the [[http://getbootstrap.com/2.3.2/examples/starter-template.html][starter-template.html]] template.
-  
-  1. [ ] Initialize a new Rails application
-     #+BEGIN_SRC sh
-       rails new example
-     #+END_SRC
-  2. [ ] Change into the newly created Rails application directory
-     #+BEGIN_SRC sh
-       cd example
-     #+END_SRC
-  3. [ ] Copy this twitter-bootstrap-step-by-step.org file
-     #+BEGIN_SRC sh
-       cp ../twitter-bootstrap-step-by-step.org .
-     #+END_SRC
-  4. [ ] Examine your Rails installation
-     #+BEGIN_SRC sh
-       rake about
-     #+END_SRC
-  5. [ ] Enable a JavaScript runtime in [[file:Gemfile][Gemfile]]
-     
-     You probably got a 'Could not find a JavaScript runtime.' message from the
-     'rake about' command. Open [[file:../Gemfile][Gemfile]] with your text editor and enable 'therubyracer.'
-     
-     #+BEGIN_SRC ruby
-       # See https://github.com/sstephenson/execjs#readme for more supported runtimes
-       gem 'therubyracer', platforms: :ruby
-     #+END_SRC
-     
-     You might open [[file:../Gemfile][Gemfile]] with Emacs, Vi, [[http://macromates.com/][TextMate]], etc. this way:
-     #+BEGIN_EXAMPLE
-       textmate Gemfile
-     #+END_EXAMPLE
-  6. [ ] Examine your Rails installation again
-     #+BEGIN_SRC sh
-       rake about
-     #+END_SRC
-  7. [ ] Create a “home” controller and “home/index”, "home/about", "home/contact" pages
-     #+BEGIN_SRC sh :tangle bin/generate-controller-home.sh :shebang #!/bin/sh
-       rails generate controller home index about contact --skip-stylesheets
-     #+END_SRC
-     
-     Note the use of '--skip-stylesheets' since we will use Twitter Bootstrap's stylesheets
-  8. [ ] Set the default route to home/index in [[file:config/routes.rb][config/routes.rb]]
-     
-     Open [[file:config/routes.rb][config/routes.rb]]  with your text editor. You will see the following
-     commented line near the top of the file:
-     #+BEGIN_SRC ruby
-       # root 'welcome#index'
-     #+END_SRC
-     
-     Let's uncomment and change the application root view:
+   1. [ ] Initialize a new Rails application
+    #+BEGIN_SRC sh
+      rails new example
+    #+END_SRC
+   2. [ ] Change into the newly created Rails application directory
+      #+BEGIN_SRC sh
+	cd example
+      #+END_SRC
+   3. [ ] Link twitter-bootstrap-step-by-step.org file
+      #+BEGIN_SRC sh
+	ln -sv ../twitter-bootstrap-step-by-step.org .
+      #+END_SRC
+   4. [ ] Open twitter-bootstrap-step-by-step.org with Emacs
+   5. [ ] Examine your Rails installation
+      #+BEGIN_SRC sh
+	rake about
+      #+END_SRC
+   6. [ ] Enable a JavaScript runtime in [[file:Gemfile][Gemfile]]
+    
+      You probably got a 'Could not find a JavaScript runtime.' message from the
+      'rake about' command. Open [[file:../Gemfile][Gemfile]] with your text editor and enable 'therubyracer.'
+    
+      #+BEGIN_SRC ruby
+	# See https://github.com/sstephenson/execjs#readme for more supported runtimes
+	gem 'therubyracer', platforms: :ruby
+      #+END_SRC
+    
+      You might open [[file:../Gemfile][Gemfile]] with Emacs, Vi, [[http://macromates.com/][TextMate]], etc. this way:
+      #+BEGIN_EXAMPLE
+	textmate Gemfile
+      #+END_EXAMPLE
+   7. [ ] Examine your Rails installation again
+      #+BEGIN_SRC sh
+	rake about
+      #+END_SRC
+   8. [ ] Create a “home” controller and “home/index”, "home/about", "home/contact" pages
+      #+BEGIN_SRC sh :tangle bin/generate-controller-home.sh :shebang #!/bin/bash
+	set -o verbose
+	rails generate controller home index about contact --skip-stylesheets
+      #+END_SRC
+    
+      Note the use of '--skip-stylesheets' since we will use Twitter Bootstrap's stylesheets
+   9. [ ] Set the default route to home/index in [[file:config/routes.rb][config/routes.rb]]
+    
+      Open [[file:config/routes.rb][config/routes.rb]]  with your text editor. You will see the following
+      commented line near the top of the file:
+      #+BEGIN_SRC ruby
+	# root 'welcome#index'
+      #+END_SRC
+    
+      Let's uncomment and change the application root view:
 
-     #+BEGIN_SRC ruby
-       root "home#index"
-     #+END_SRC
-     
-     Now, Rails will direct vistors to the application to home/index. We are
-     ready to start the Rails application and incorporate Twitter Bootstrap's
-     stylesheets and JavaScript scripts.
-  9. [ ] Start the rails server
-     #+BEGIN_SRC sh
-       rails server --port 3000
-     #+END_SRC
+      #+BEGIN_SRC ruby
+	root "home#index"
+      #+END_SRC
+    
+      Now, Rails will direct vistors to the application to home/index. We are
+      ready to start the Rails application and incorporate Twitter Bootstrap's
+      stylesheets and JavaScript scripts.
+   10. [ ] Start the rails server
+       #+BEGIN_SRC sh
+	 rails server --port 3000
+       #+END_SRC
+   11. [ ] View the application
+** Summary
 
-  Now, let's incorporate Bootstrap into our application.
+   Now, let's incorporate Bootstrap into our application.
+   
 * TODO Milestone 2: Set up Twitter Bootstrap with the [[https://github.com/thomas-mcdonald/bootstrap-sass/blob/master/README.md#bootstrap-for-sass][bootstrap-sass]] gem
-  1. [ ] Enable [[http://rubygems.org/gems/bootstrap-sass][bootstrap-sass]] in file:Gemfile
+  1. [ ] Enable [[http://rubygems.org/gems/bootstrap-sass][bootstrap-sass]] in file:./Gemfile
      #+BEGIN_SRC ruby
-       # See http://rubygems.org/gems/bootstrap-sass (September 3, 2014)
-       gem "bootstrap-sass", "~> 3.2.0.2"
+       # 3.3.1.0 released 2014-Nov-12, See http://rubygems.org/gems/bootstrap-sass
+       gem "bootstrap-sass", "3.3.1.0"
      #+END_SRC
+     + Note: See http://rubygems.org/gems/bootstrap-sass for latest version
   2. [ ] run bundle install
   3. [ ] Remove the app/assets/stylesheets/application.css file
      #+BEGIN_SRC sh
@@ -95,7 +101,7 @@
        @import "bootstrap";
        body { padding-top: 50px; }
      #+END_SRC
-  5. [ ] Import bootstrap javascript in [[file:app/assets/javascripts/application.js][app/assets/javascripts/application.js]]
+  5. [ ] Import bootstrap javascript in [[file:app/assets/javascripts/application.js][file:./app/assets/javascripts/application.js]]
      #+BEGIN_SRC js
        //= require jquery
        //= require jquery_ujs
@@ -112,11 +118,11 @@
   1. [ ] Replace app/views/layouts/application.html.erb with
 
      Tangle the following file to [[file:app/views/layouts/application.html.erb]].
-     #+BEGIN_SRC html :tangle app/views/layouts/application.html.erb :padline no
 
+     #+BEGIN_SRC html :tangle app/views/layouts/application.html.erb :padline no
        <!DOCTYPE html>
-       <html lang="en">
-         <head>
+       <html lang="en"> 
+        <head>
            <title>Starter Template for Bootstrap</title>
            <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
            <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
@@ -137,13 +143,13 @@
                    <span class="icon-bar"></span>
                    <span class="icon-bar"></span>
                  </button>
-                 <a class="navbar-brand" href="#">Project name</a>
+                 <a class="navbar-brand" href="<%= root_path%>">Project name</a>
                </div>
                <div class="collapse navbar-collapse">
                  <ul class="nav navbar-nav">
-                   <li class="active"><a href="#">Home</a></li>
-                   <li><a href="#about">About</a></li>
-                   <li><a href="#contact">Contact</a></li>
+                   <li class="active"><%= link_to('Home', root_path) %></li>
+                   <li><%= link_to('About', home_about_path) %></li>
+                   <li><%= link_to('Contact', home_contact_path) %></li>
                  </ul>
                </div><!--/.nav-collapse -->
              </div>
@@ -152,8 +158,6 @@
            <div class="container">
 
              <div class="starter-template">
-               <h1>Bootstrap starter template</h1>
-               <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
                <%= yield %>
              </div>
 
@@ -161,7 +165,6 @@
          </body>  
 
        </html>
-
      #+END_SRC
      
      The starter example layout uses a fixed width layout, which is introduced at [[http://twitter.github.io/bootstrap/scaffolding.html#layouts][scaffolding.html#layouts]].
@@ -172,16 +175,19 @@
      went wrong.
 
 * Reference Section
-** The most popular Rails Bootstrap Gems (October 2014)
+** The most popular Rails Bootstrap Gems (November 2014)
   #+TBLNAME: bootstrap_gems
   | Gem                     | Version | Downloads | This version | Author          |
   |-------------------------+---------+-----------+--------------+-----------------|
-  | [[http://rubygems.org/gems/bootstrap-sass][bootstrap-sass]]          | 3.2.0.2 | 4,800,000 | 79,000       | [[http://rubygems.org/profiles/tmcdonald][Thomas McDonald]] |
-  | [[http://rubygems.org/gems/twitter-bootstrap-rails][twitter-bootstrap-rails]] |   3.2.0 | 1,400,000 | 26,000       | [[http://rubygems.org/profiles/seyhunak][Seyhun Akyurek]]  |
-  | [[http://rubygems.org/gems/less-rails-bootstrap][less-rails-bootstrap]]    |   3.2.0 | 260,000   | 6,600        | [[http://rubygems.org/profiles/metaskills][Ken Collins]]     |
+  | [[http://rubygems.org/gems/bootstrap-sass][bootstrap-sass]]          | 3.3.1.0 | 5,100,000 | 10,000       | [[http://rubygems.org/profiles/tmcdonald][Thomas McDonald]] |
+  | [[http://rubygems.org/gems/twitter-bootstrap-rails][twitter-bootstrap-rails]] |   3.2.0 | 1,400,000 | 37,000       | [[http://rubygems.org/profiles/seyhunak][Seyhun Akyurek]]  |
+  | [[http://rubygems.org/gems/less-rails-bootstrap][less-rails-bootstrap]]    | 3.3.0.0 | 270,000   | 198          | [[http://rubygems.org/profiles/metaskills][Ken Collins]]     |
   | [[http://rubygems.org/gems/sass-twitter-bootstrap][sass-twitter-bootstrap]]  |   2.3.0 | 6,000     | 1,100        | [[http://rubygems.org/profiles/wadetandy][Wade Tandy]]      |
 ** Twitter Bootstrap GitHub
-   | Link                                 | Description                             |
-   |--------------------------------------+-----------------------------------------|
-   | [[https://github.com/twbs/bootstrap]]    | The Twitter Bootstrap GitHub repository |
+   | Link                                                                         | Description                             |
+   |------------------------------------------------------------------------------+-----------------------------------------|
+   | [[https://github.com/twbs/bootstrap]]                                            | The Twitter Bootstrap GitHub repository |
+   | https://github.com/twbs/bootstrap/tree/master/docs/examples                  |                                         |
+   | https://github.com/twbs/bootstrap/tree/master/docs/examples/starter-template |                                         |
+
 ** http://devgirl.org/2012/08/06/styling-your-app-with-twitter-bootstrap/
